@@ -1,3 +1,9 @@
+2010-01-19  Vincent Torri  <doursse at users dot sf dot net>
+
+	* src/lib/dlfcn/dlfcn.c:
+	Fix dladdr() on Windows CE: use the calling process
+	address to get the path.
+
 2009-12-19  Vincent Torri  <doursse at users dot sf dot net>
 
 	* Makefile.am:
